# ModelViewer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CTestCustom.cmake.in  GeometryStructs_8hpp.html  GeometryStructs_8hpp__dep__incl.map  GeometryStructs_8hpp__dep__incl.md5  GeometryStructs_8hpp_source.html  Geometry_8hpp.html  Geometry_8hpp__dep__incl.map  Geometry_8hpp__dep__incl.md5  Geometry_8hpp_source.html  ILoader_8hpp.html  ILoader_8hpp__dep__incl.map  ILoader_8hpp__dep__incl.md5  ILoader_8hpp__incl.map  ILoader_8hpp__incl.md5  ILoader_8hpp_source.html  LICENSE  Main.qml  Material_8cpp.html  Material_8cpp__incl.map  Material_8cpp__incl.md5  Material_8hpp.html  Material_8hpp__dep__incl.map  Material_8hpp__dep__incl.md5  Material_8hpp__incl.map  Material_8hpp__incl.md5  Material_8hpp_source.html  ModelManager_8cpp.html  ModelManager_8cpp__incl.map  ModelManager_8cpp__incl.md5  ModelManager_8hpp.html  ModelManager_8hpp__dep__incl.map  ModelManager_8hpp__dep__incl.md5  ModelManager_8hpp__incl.map  ModelManager_8hpp__incl.md5  (+403 more)
.github/workflows/: build.yml  doxygen.yml  install.yml  linter.yml  tests.yml
assets/: Teapot.qml
assets/meshes/: teapot.mesh
cmake/: CPackConfig.cmake
docs/: Doxyfile
include/: Geometry.hpp  ILoader.hpp  Material.hpp  ModelManager.hpp  ObjGeometry.hpp  ObjLoader.hpp  StringHelpers.hpp  example.hpp
include/Geometry/: GeometryStructs.hpp  ObjGeometry.hpp
include/Helpers/: StringHelpers.hpp
include/Loaders/: ILoader.hpp
include/Material/: Material.hpp
qml_src/: CameraControls.qml  CustomModel.qml  ModelEditor.qml  ModelView.qml  ModelViewingCamera.qml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+25 more)
src/: Material.cpp  ModelManager.cpp  ObjGeometry.cpp  ObjLoader.cpp  example.cpp
src/Geometry/: ObjGeometry.cpp
src/Material/: Material.cpp
tests/: CMakeLists.txt  example_test.cpp
tests/qt/: qt_example_test.cpp
tests/src/: example_test.cpp  model_manager_tests.cpp  obj_loader_tests.cpp  string_helpers_tests.cpp
